# turtlebot_SCN_MSIT_ESE

./: .gitignore  README.md
doc/: API_Documentation_rev2.docx  Framework_design_rev7.docx  Framework_model_rev6.docx  Future_Work_rev2.docx  Usecase_Testing_Steps_rev1.docx  User_Manual_rev1.docx  User_Manual_rev2.docx
documents/: Project timeline.mpp
experiments/: make.sh  temp.c  test.script  turtlebot.pml
experiments/model_checking/: topic.pml
experiments/src/reconfigure/: CMakeLists.txt  package.xml
experiments/src/reconfigure/src/: Dependency.cpp  Dependency.h  demo_algo1.cpp  demo_algo2.cpp  demo_node1.cpp  demo_node2.cpp  demo_node2.launch  demo_node3.cpp  log.h  reconfigure_node.cpp  reconfigure_node.launch  with_launch_file.py  without_launch_file.py
experiments/src/reconfigure/srv/: frameworkInfoService.srv  systemControlRegisterService.srv  userInterfaceService.srv
experiments/src/reconfigure/unittest/: init_test.cpp  unit_test_dependency.cpp
experiments/src/reconfigure/usecase/: demoNode1.cpp  demoNode2.cpp  demoNode3.cpp  demo_node1.cpp  demo_node2.cpp  demo_node3.cpp
experiments/src/scn_library/: CMakeLists.txt  package.xml
experiments/src/scn_library/msg/: debug_msg.msg
experiments/src/scn_library/src/: scn_core.cpp  scn_node_handle.cpp  scn_node_handle.h  scn_publisher.cpp  scn_service.cpp  scn_service.h  scn_service_client.cpp  scn_service_client.h  scn_subscriber.h  scn_utils.h
experiments/src/scn_library/srv/: kill.srv  presence.srv  scnNodeComm.srv  systemControlRegisterService.srv
experiments/src/scnlib/inc/: Readme.txt
experiments/src/scnlib/src/: Readme.txt
framework/model_checking/: service.pml
framework/src/: README.md
framework/src/reconfigure/: CMakeLists.txt
framework/src/reconfigure/debug/: pingDemoNode.sh
framework/src/reconfigure/integration_test/1/: README.md  demoNode1.cpp  demoNode2.cpp
framework/src/reconfigure/integration_test/2/: README.md  demoNode4.cpp  demoNode5.cpp  demoNode6.cpp  demoNode8.cpp
framework/src/reconfigure/integration_test/3/: README.md  demoNode10.cpp  demoNode11.cpp  demoNode12.cpp  demoNode15.cpp  demoNode16.cpp  demoNode17.cpp  demoNode9.cpp
framework/src/reconfigure/integration_test/4/: README.md  demoNode19.cpp
framework/src/reconfigure/src/: reconfigure_node.cpp
framework/src/reconfigure/srv/: demoNodeService.srv
framework/src/reconfigure/unit_test/: init_test.cpp  unit_test_dependency.cpp
framework/src/reconfigure/use_case/: wall_follower.py
framework/src/reconfigure/usecase/1/: demoNode1.cpp
framework/src/reconfigure/usecase/3/: demoNode13.cpp  demoNode14.cpp  demoNode16.cpp
framework/src/reconfigure/usecase/4/: README.md  demoNode18.cpp
framework/src/scn_library/: CMakeLists.txt
framework/src/scn_library/src/: scn_core.cpp  scn_node_handle.cpp  scn_service_server.cpp  scn_subscriber.cpp
framework/src/scn_library/srv/: scnNodeComm.srv
kobuki/devel/: .catkin  .rosinstall  setup.sh
kobuki/devel/include/kobuki_msgs/: AutoDockingAction.h  AutoDockingActionFeedback.h  AutoDockingActionGoal.h  AutoDockingActionResult.h  AutoDockingFeedback.h  AutoDockingGoal.h  AutoDockingResult.h  BumperEvent.h  ButtonEvent.h  CliffEvent.h  ControllerInfo.h  DigitalInputEvent.h  DigitalOutput.h  DockInfraRed.h  ExternalPower.h  KeyboardInput.h  Led.h  MotorPower.h  PowerSystemEvent.h  RobotStateEvent.h  ScanAngle.h  SensorState.h  Sound.h  VersionInfo.h  WheelDropEvent.h
kobuki/devel/include/yocs_cmd_vel_mux/: reloadConfig.h
kobuki/devel/include/yocs_msgs/: ARPair.h  ARPairList.h  Column.h  ColumnList.h  DockingInteractorAction.h  DockingInteractorActionFeedback.h  DockingInteractorActionGoal.h  DockingInteractorActionResult.h  DockingInteractorFeedback.h  DockingInteractorGoal.h  DockingInteractorResult.h  LocalizeAction.h  LocalizeActionFeedback.h  LocalizeActionGoal.h  LocalizeActionResult.h  LocalizeFeedback.h  LocalizeGoal.h  LocalizeResult.h  MagicButton.h  NavigateToAction.h  NavigateToActionFeedback.h  NavigateToActionGoal.h  NavigateToActionResult.h  NavigateToFeedback.h  NavigateToGoal.h  NavigateToResult.h  NavigationControl.h  NavigationControlStatus.h  Table.h  TableList.h  Trajectory.h  TrajectoryList.h  Wall.h  WallList.h  Waypoint.h  WaypointList.h  WaypointListServiceRequest.h  WaypointListServiceResponse.h
kobuki/devel/include/yocs_velocity_smoother/: paramsConfig.h
kobuki/devel/lib/kobuki_driver/: demo_kobuki_initialisation  demo_kobuki_sigslots  demo_kobuki_simple_loop  kobuki_velocity_commands  simple_keyop  version_info
kobuki/devel/lib/kobuki_ftdi/: find_devices  flasher  ftdi_kobuki  ftdi_read_eeprom  ftdi_scan  ftdi_write_eeprom  get_serial_number  overwrite_serial_number  reset_device  unflasher
kobuki/devel/lib/kobuki_keyop/: keyop
kobuki/devel/lib/pkgconfig/: kobuki_auto_docking.pc  kobuki_bumper2pc.pc  kobuki_capabilities.pc  kobuki_controller_tutorial.pc  kobuki_dashboard.pc  kobuki_description.pc  kobuki_dock_drive.pc  kobuki_driver.pc  kobuki_ftdi.pc  kobuki_gazebo.pc  kobuki_gazebo_plugins.pc  kobuki_keyop.pc  kobuki_msgs.pc  kobuki_node.pc  kobuki_qtestsuite.pc  kobuki_random_walker.pc  kobuki_rapps.pc  kobuki_rviz_launchers.pc  kobuki_safety_controller.pc  kobuki_testsuite.pc  yocs_ar_marker_tracking.pc  yocs_ar_pair_approach.pc  yocs_ar_pair_tracking.pc  yocs_cmd_vel_mux.pc  yocs_controllers.pc  yocs_diff_drive_pose_controller.pc  yocs_joyop.pc  yocs_keyop.pc  yocs_localization_manager.pc  yocs_math_toolkit.pc  yocs_msgs.pc  yocs_navigator.pc  yocs_rapps.pc  yocs_safety_controller.pc  yocs_velocity_smoother.pc  yocs_virtual_sensor.pc  yocs_waypoint_provider.pc  yocs_waypoints_navi.pc
kobuki/devel/lib/yocs_joyop/: joyop
kobuki/src/: .rosinstall
patch/: move_base.patch
practice/: wall_follower.py
result/: static_analysis.txt
rocon/devel/: .catkin  .rosinstall  setup.sh
rocon/src/: .rosinstall
scn_library/src/: scn_lib.c
turtlebot/: cscope.in.out  tags
turtlebot/devel/: .catkin  .rosinstall  setup.sh
turtlebot/install/: _setup_util.py  setup.sh
turtlebot/src/: .rosinstall
turtlebot/src/navigation/: tags
(+1312 files in other folders)
